skan_tests/error/failString.sk
int main() {
    string s = hi; /* needs "hi" to be recognized as a string */
    return 0;
}